--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -12,7 +12,7 @@
 cv_pdf: /assets/pdf/example_pdf.pdf # path to your CV PDF file
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: your-email@usf.edu # your email address
+email: zekri2@usf.edu # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
 github_username: TheShadowTiki # your GitHub user name
@@ -36,7 +36,7 @@ linkedin_username: abdul-malik-zekri # your LinkedIn user name
 # quora_username: # your Quora username
 # research_gate_profile: # your profile on ResearchGate
 rss_icon: true # comment this line to hide the RSS icon
-scholar_userid: YOUR_ID_HERE # your Google Scholar ID
+scholar_userid: zDS8vBUAAAAJ # your Google Scholar ID
 # scopus_id: # your profile on Scopus
 # semanticscholar_id: # your Semantic Scholar ID
 # spotify_id: # your spotify id
